[package]
name = "heyocollab"
version = "0.2.0"
edition = "2021"
description = "Real-time collaborative document manager for AI generation sequences using Automerge CRDT with Autosurgeon"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core CRDT - autosurgeon 0.8 requires automerge 0.6
automerge = "0.6"
autosurgeon = "0.8"

# Data types
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Macro utilities (for storyboard entity_crud! macro)
paste = { version = "1.0", optional = true }

# Error handling
thiserror = "1.0"

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]
storyboard = ["paste"]

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "binary_sizes"
path = "examples/binary_sizes.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"