[package]
name = "heyocollab"
version = "0.2.0"
edition = "2021"
description = "Real-time collaborative document manager for AI generation sequences using Automerge CRDT with Autosurgeon"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "json2automerge"
path = "src/bin/json2automerge/main.rs"
required-features = ["cli"]

[[bin]]
name = "sb-migrate"
path = "src/bin/sb-migrate/main.rs"
required-features = ["migrate"]

[dependencies]
# Core CRDT - autosurgeon 0.8 requires automerge 0.6
automerge = "0.6"
autosurgeon = "0.8"

# Data types
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Macro utilities (for storyboard entity_crud! macro)
paste = { version = "1.0", optional = true }

# Error handling
thiserror = "1.0"

# CLI support (optional)
clap = { version = "4.0", features = ["derive", "env"], optional = true }
anyhow = { version = "1.0", optional = true }

# Migration tool support (optional)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
aes-gcm = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
flate2 = { version = "1.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
indicatif = { version = "0.17", optional = true }
base64 = { version = "0.22", optional = true }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]
storyboard = ["paste"]
cli = ["clap", "anyhow", "storyboard"]
migrate = ["reqwest", "aes-gcm", "pbkdf2", "sha2", "flate2", "tokio", "indicatif", "base64", "cli"]

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "binary_sizes"
path = "examples/binary_sizes.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"